app/assets/stylesheets/welcome.css.scss
// Place all the styles related to the welcome controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


a, p, div, h1, h2, h3, input {font-family: 'Cabin Condensed', sans-serif;}
body              {
  background: url(background.jpg) no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}
.container        { width: 850px; margin: auto; position: absolute; top: 0; left: 0; bottom: 0; right: 0; height: 580px;}
.phone-container  { width:320px; display: inline-block;}
.content-container{ width:495px; display: inline-block; vertical-align: top; padding-top: 40px;
  #contact-text {color: white;}
  .instructions {color: white; font-size: 18px; line-height: 20px; margin-top: 30px; letter-spacing: 1px;}
}



.form-container {margin-top: 30px;}
#number{
  background-color: transparent; border: none; font-size: 16px; display: block; padding: 5px 0;
  color: white; border-radius: 0; border-bottom: 2px solid white; margin-bottom: 15px; letter-spacing: 1px; width: 300px;

}

#number:focus {
  outline: none;
}


#thanks {display: none;}
#submit-form {
  border: 2px solid white; color: white;
  background-color: transparent; font-size: 16px; display: block;
  border-radius: 0; margin-bottom: 15px; letter-spacing: 1px; width: 300px;
}


.credits { position: fixed; color: white; bottom: 10px; right: 20px;}
#mobile-credit-text {display: none;}


.messages-wrapper {
  display: none;
  position: relative;
}
.message {
  border-radius: 20px 20px 20px 20px;
  margin: 0 15px 10px;
  padding: 15px 20px;
  position: relative;
}
.message.to {
  background-color: #2095FE;
  color: #fff;
  margin-left: 15%;
}
.message.from {
  background-color: #E5E4E9;
  color: #363636;
  margin-right: 15%;
}
.message.to + .message.to,
.message.from + .message.from {
  margin-top: -7px;
}
.message:before {
  border-color: #2095FE;
  border-radius: 50% 50% 50% 50%;
  border-style: solid;
  border-width: 0 20px;
  bottom: 0;
  clip: rect(20px, 35px, 42px, 0px);
  content: " ";
  height: 40px;
  position: absolute;
  right: -50px;
  width: 30px;
  z-index: -1;
}
.message.from:before {
  border-color: #E5E4E9;
  left: -50px;
  -moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  filter: FlipH;
  -ms-filter: "FlipH";
}

// responsive

@media(max-width:729px){
  .container {width: 100%; position: relative;}
  .phone-container {display: none;}
  .content-container {width: 100%;}
  .form-container {
    width: 100%;
    #submit-form{width: 100%;}
    #number{width: 100%; border: 2px solid white; color: white;}
  }
  .credits {display: none;;}
  #mobile-credit-text {display: block;
    a{ color: white; &:hover {text-decoration: none;}}
  }

  .messages-wrapper{display: block;}
}

